2008-01-15  John W. Eaton  <jwe@octave.org>

	* mappers.cc (install_mapper_functions): Move test for asin here
	from test/test_arith.m.

	* graphics.h.in (class line::properties, class text::properties):
	Rename erase_mode property to erasemode.

2008-01-15  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (base_properties::remove_child,
	base_properties::adopt, base_properties::update_axis_limits):
	Make virtual.
	(base_graphics_object::mark_modified,
	base_graphics_object::override-defaults,
	base_graphics_object::set_from_list, base_graphics_object::set,
	base_graphics_object::get, base_graphics_object::get_parent,
	base_graphics_object::remove_child, base_graphics_object::adopt,
	base_graphics_object::reparent, base_graphics_object::defaults,
	base_graphics_object::type): Add default implementation.
	(class root_figure, class figure, class axes, class line,
	class text, class image, class patch, class surface):
	Remove overloaded virtual methods whose implementation is
	identical to the default one.

	* genprops.awk: Handle 'h' modifier for hidden properties.
	Replace "get(void)" method with "get(bool all = false)" to allow
	access to hidden properties.

	* graphics.h.in (base_properties::get, base_graphics_object::get,
	graphics_object::get, root_figure::get, figure::get, axes::get,
	line::get, text::get, patch::get, surface::get, image::get):
	New arg, ALL, to access hidden properties.
	(gh_manager::do_get_object): Do not look for invalid handles.
	(figure::properties::__plot_stream__,
	figure::properties::__enhanced__, axes::properties::__colorbar__):
	Make properties hidden.
	(axes::properties, line::properties, text::properties,
	patch::properties, surface::properties): Remove obsolete 'a'
	property modifier.
	* graphics.cc (base_properties::get): New arg ALL, to access
	hidden properties.
	(base_properties::mark_modified): Call mark_modified only on valid
	parent object.
	(__get__): New internal function returning all properties,